[metadata]
name = festune
version = 0.1.0
url = https://github.com/Martiusweb/festune/
author = Martin Richard, Louise Crépet
author_email = martius@martiusweb.net
license = GPLv2
description =  Manage Spotify playlists with a script
long_description = file: README.rst

[options]
packages = find:
python_requires = >=3.7
zip_safe = True

install_requires =
    spotipy >= 2.4

[options.entry_points]
console_scripts =
  festune-login = festune.auth:prompt_user_credentials

[pylama]
format = pylint
skip = */.tox/*,*/.env/*,*/venv/
linters = pylint,mccabe,pep8
ignore = F0401,C0111,E731,R0903
